[package]
name = "oxi_crawler-the-web-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
# The async runtime
tokio = { version = "1", features = ["full"] }
# HTTP client with async support
reqwest = { version = "0.11", features = ["json"] }
# HTML parsing
scraper = "0.18"
# For beautiful terminal colors
colored = "2.0"
futures = "0.3"